#2 - Modify builder syntax after multiple recommendations